2008-10-23  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.47 (2008-10-23)

2008-10-23  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2188102 ]: new-clx timeout precision is limited
	* modules/clx/new-clx/clx.f (PROCESS-EVENT, EVENT-LISTEN): pass
	unbound instead of NIL as the usec argument to sec_usec()

2008-10-22  Sam Steingold  <sds@gnu.org>

	* po/Makefile.in.in (install-data-yes, installdirs): use "mkdir -p",
	just like on 2007-12-05
	* Makefile.devel (VER, REL): use "./version.sh" instead of "version.sh"

2008-10-20  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (check_iff): default=(unsigned)~0
	(IFADDRS): accept :FLAGS-AND and :FLAGS-OR to filter out some interfaces
	(pushSTACK_sockaddr): replaces sockaddr_to_lisp1

2008-10-20  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1): check that the DEFCHECKER
	default is a valid CPP constant ([_A-Za-z0-9]*) before protecting
	it with "#ifdef" to accommodate "(unsigned)~0" et al

2008-10-18  Shawn Betts  <sabetts@gmail.com>
	Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.lisp (get-wm-class): expect the
	unexpected: there may be many Nulls in WM_CLASS

2008-10-18  Adam Warner  <awarner@users.sourceforge.net>

	fix bug #[ 2175937 ]: Patch --without-unicode build failure
	* pathname.d (direntry_to_string) [!UNICODE]: restore non-UNICODE
	build by using n_char_to_string()

2008-10-17  Sam Steingold  <sds@gnu.org>

	* makemake.in (docdir): defaults in configure to
	${datarootdir}/doc/${PACKAGE_TARNAME},
	not ${datarootdir}/doc/${PACKAGE}
	Reported by "Jose A. Ortega Ruiz" <jao@gnu.org>
	in <http://article.gmane.org/gmane.lisp.clisp.general/12471>

2008-10-17  Sam Steingold  <sds@gnu.org>

	* makemake.in: partially reverted the 2008-10-10 (revision 1.775) patch
	which broke Solaris 8 which requires "gllib/stdint.h".
	CPPFLAGS is for host (and this goes into UTILCOMPILE) while
	XCPPFLAGS is for target (and thus is used to compile *.d)