@@ -2,6 +2,11 @@
 
 	* version.sh: 2.47 (2008-10-23)
 
+2008-10-23  Stelian Ionescu  <sionescu@common-lisp.net>
+
+	* configure, makemake.in: accept --infodir for compatibility with
+	generated configure scripts
+
 2008-10-23  Sam Steingold  <sds@gnu.org>
 
 	fix bug #[ 2188102 ]: new-clx timeout precision is limited
